# conwell_replication

./: .gitignore  METHODS.md  README.md  RESULTS.md  pyproject.toml
configs/: extract.yaml  min_nn.yaml  splithalf.yaml
features/: stimulus_pool_smoketest.csv
figures/: diag1_cross_roi_rdm_corr.csv  diag2_ood_effect_on_wrsa.csv  old_run_rsa_eval.py.txt  old_vs_new_brain_comparison.csv
figures/min_nn_results/: combo_metric_summary.csv
figures/min_nn_results/shared_cluster_k5_0/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_cluster_k5_1/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  noise_ceiling_summary.csv  summary.txt
figures/min_nn_results/shared_cluster_k5_2/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_cluster_k5_3/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_cluster_k5_4/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_cluster_k5_agg/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  result_counts_by_subject_metric_score_set.csv  summary.txt
figures/min_nn_results/shared_ood/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_random_0/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_random_1/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  result_file_counts_by_subject.csv  summary.txt
figures/min_nn_results/shared_random_2/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_random_3/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_random_4/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_random_agg/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/shared_tau/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_0/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_1/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_2/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_3/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_4/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
figures/min_nn_results/subject_cluster_k5_agg/: controlled_figure_model_stats.csv  summary.txt  (+3 more)
figures/min_nn_results_sub01_sub03/: combo_metric_summary.csv
figures/roi_stats_summary/: architecture_effects_by_roi.csv  overall_scores_by_roi.csv
figures/splithalf_results/: controlled_comparison_model_counts.csv  controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  result_counts_by_subject_metric_score_set.csv  result_counts_by_subject_model_metric_score_set.csv  result_file_counts_by_subject.csv  summary.txt
figures/splithalf_results_10layer/: README.md  model_metric_group_summary.csv  model_metric_subject_scores.csv  replication_model_audit.csv  result_counts_by_subject_metric_score_set.csv  summary.txt
figures/splithalf_results_ood/: controlled_figure_model_stats.csv  model_metric_group_summary.csv  model_metric_subject_scores.csv  summary.txt
reports/: conwell_nsd_layer_coverage_for_laion_manifest.csv  conwell_nsd_layer_range_vs_our_sample.csv  conwell_nsd_layer_range_vs_our_sample_summary.csv  conwell_nsd_train_selected_full_vs_our_sample.csv  conwell_nsd_train_selected_full_vs_our_sample_summary.csv  laion_fmri_conwell_fig2_4_effects.csv  laion_fmri_conwell_fig2_4_report.md  laion_fmri_conwell_fig2_4_score_summary.csv  laion_fmri_conwell_fig2_4_taskonomy_endpoints.csv
resources/: README.md  conwell_model_list.csv  conwell_model_list_core.csv  conwell_model_list_replication.csv  curated_model_list.csv  model_metadata.csv
resources/archive/: README.md  conwell_model_list_smoketest.csv
resources/weights/: README.md
scripts/: README.md  build_fig2_4_report.py  compute_ncsnr.py  compute_noise_ceiling.py  download_laion_fmri.py  make_eval_model_manifest.py  plot_otc_roi.py  plot_splithalf_results.py  run_pipeline.sh
scripts/archive/: README.md
src/conwell_replication/: __init__.py
(+401 files in other folders)
